# birch-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Engine.cpp  Engine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/entrypoint/: main.cpp
